# Todo-Cli

./: README.md  pyproject.toml  todos.json
tests/: test_todo.py
todo/: __init__.py  cli.py  models.py  storage.py
